[package]
name = "vessel"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.1"
bincode = "1.3"
futures-util = "0.3.31"
actix-cors = "0.6"
http = "0.2.12"
reqwest = { version = "0.11", features = ["json"] }
wmm = { version = "0.2", default-features = false } 
time = "0.3"
lazy_static = "1.5.0"
rumqttc = "0.24"
world_magnetic_model = "0.4.0"
uom = "0.37.0"
chrono = { version = "0.4", features = ["serde"] }
rand_distr = "0.5.1"
rand = "0.9.2"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4.28"
env_logger = "0.11.8"
